# ai-engineer-training

week03-homework/: pyproject.toml
week03-homework/chunking_research/: main.py  report.md
week03-homework/chunking_research/data/: artificial_intelligence.txt  machine_learning.txt  natural_language_processing.txt
week03-homework/ocr_research/: IMPLEMENTATION_GUIDE.md  README.md  __init__.py  image_ocr_reader.py  main.py  report.md
